...
            name="controller"
            type="com.deledzis.messenger.presentation.features.settings.SettingsActionsHandler" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/fragment_settings_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/background">

        <com.google.android.material.appbar.AppBarLayout
...
                        android:layout_marginEnd="16dp"
                        android:text="@string/settings"
                        android:textColor="@color/text"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/save_container"
                        app:layout_constraintStart_toEndOf="@+id/close_container"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/save_container"
                        android:layout_width="48dp"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.username}" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tie_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:text="@={viewModel.newPassword}" />
                </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/settings_need_password_disclaimer"
                    android:textColor="@color/text_outlined" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    style="@style/TextButton.Red"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="@dimen/size_32dp"
                    android:enabled="@{!viewModel.loading}"
...
