...
            name="controller"
            type="com.deledzis.messenger.presentation.features.login.LoginActionsHandler" />

    </data>

    <ScrollView
        android:id="@+id/fragment_login_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <LinearLayout
...
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="64dp"
                android:clickable="@{!viewModel.loading &amp;&amp; viewModel.username != null &amp;&amp; !viewModel.username.empty &amp;&amp; viewModel.password != null &amp;&amp; !viewModel.password.empty}"
                android:enabled="@{!viewModel.loading &amp;&amp; viewModel.username != null &amp;&amp; !viewModel.username.empty &amp;&amp; viewModel.password != null &amp;&amp; !viewModel.password.empty}"
...
