...
    <string name="error_storage_permissions">Необходимо разрешение на доступ к файлам</string>
    <string name="error_get_messages">Не удалось обновить сообщения</string>
    <string name="error_empty_username">Нужно ввести логин</string>
    <string name="error_empty_actual_password">Нужно ввести действующий пароль</string>
    <string name="error_username_invalid_length">Логин должен содержать от 4 до 100 символов включительно</string>
    <string name="error_nickname_invalid_length">Имя может содержать до 100 символов включительно</string>
    <string name="error_password_invalid_length">Пароль должен содержать от 8 до 64 символов включительно</string>
    <string name="error_empty_message">Пустое сообщение!</string>
    <string name="error_message_sending">Не удалось отправить сообщение</string>
    <string name="error_file_size_exceed">Максимальный размер изображения 5 МБ</string>

    <!-- API errors -->
    <string name="error_api_unknown">Не удалось выполнить запрос. Код ошибки: %d</string>
...
    <string name="error_api_408">Чат не найден</string>
    <string name="error_api_409">Не указан пользователь</string>
    <string name="error_api_410">Не указан собеседник</string>
    <string name="error_api_411">Не указан чат</string>
    <string name="error_api_412">Не удалось отправить сообщение</string>
    <string name="error_api_413">Не указан текущий пароль</string>
    <string name="error_api_414">Указан неверный текущий пароль</string>
    <string name="error_api_415">Не удалось обновить пользователя</string>
    <string name="error_api_416">Диалог уже создан</string>
    <string name="error_api_417">Не указан тип сообщения</string>
    <string name="error_api_418">Сообщение пустое</string>
    <string name="error_api_419">Не удалось удалить аккаунт</string>
    <string name="error_api_420">Не удалось удалить чат</string>
...
